--- a/scss/Layouts/_member.scss
+++ b/scss/Layouts/_member.scss
@@ -1,8 +1,7 @@
 .member {
   .container {
     .member-text {
-      color: transparent;
-      -webkit-text-stroke: 1px #707070;
+      color: rgba(112, 112, 112, 0.5);
     }
     @media (max-width: 550px) {
       .member-text {
